<resources>
    <string name="app_name" translatable="false">OpenDSBmobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_group_title_content">Content</string>
    <string name="nav_item_timetables">Timetables</string>
    <string name="nav_item_tiles">Tiles</string>
    <string name="nav_item_news">News</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_id">Identification</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_credentials">Login or password incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nav_group_title_logins">Logins</string>
    <string name="nav_item_add">Add login</string>
    <string name="nav_item_edit">Edit login</string>
    <string name="nav_item_delete">Delete login</string>
    <string name="prompt_alias">Alias</string>
    <string name="error_login_exists">This login was added before. Select it in the menu to log in.</string>
    <string name="actionbar_last_update">Last updated on: %s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string-array name="pref_appearance_theme_titles">
        <item>Light</item>
        <item>Dark</item>
        <item>Automatic (daytime)</item>
    </string-array>

    <string-array name="pref_appearance_theme_p_titles">
        <item>Light</item>
        <item>Dark</item>
        <item>Automatic (daytime)</item>
        <item>Follow system</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_content_view">Contents</string>

    <string name="share_image">Share image to …</string>
    <string name="error_no_preview">No preview found</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="action_back">Back</string>
    <string name="action_next">Next</string>
    <string name="menu_share_link">Share link to …</string>
    <string name="menu_share_html">Share HTML to …</string>
    <string name="menu_header_advanced_sharing">Advanced sharing</string>
    <string name="share_as_image">Share as image to …</string>
    <string name="title_share">Share</string>
    <string name="title_open_in_browser">Open in browser</string>
    <string name="share_news">Share news to …</string>
    <string name="toast_login_failed">Login failed</string>
    <string name="toast_dsb_license_expired">Your provider\'s DSB license expired!</string>
    <string name="account_type_dsb" translatable="false">com.kai_jan_57.opendsbmobile.DSB</string>
    <string name="content_authority" translatable="false">com.kai_jan_57.opendsbmobile.provider</string>
    <string name="cache_outdated">An outdated previously cached version is shown.</string>
    <string name="search_hint">Search content</string>
    <string name="channel_name">Content updates</string>
    <string name="channel_description">Notifies you about changed or new content on DSBmobile</string>
    <string name="pref_intent_account">Account Preferences</string>
    <string name="pref_notify_new">New content</string>
    <string name="pref_notify_updated">Updated content</string>
    <string name="notification_content_new">New Content</string>
    <string name="notification_content_updated">Content updated</string>
    <string name="cred_demo_login" translatable="false">187801</string>
    <string name="cred_demo_password" translatable="false">public</string>
    <string name="login_demo">Demo login</string>
    <string name="demo_alias">Demo</string>
    <string name="action_scan_qr">Scan QR code</string>
    <string name="error_qr_no_cred">This is not a DSBmobile QR code.</string>
    <string name="permission_camera_rationale">Camera permissions are needed to scan QR codes.</string>
    <string name="action_about">About</string>
    <string name="pref_title_notifications_enabled">Notifications</string>
    <string name="pref_header_behaviour">Behaviour</string>
    <string name="pref_title_parser_enabled">Enable HTML table parser</string>
    <string name="pref_appearance_restart_notice">If your chosen style has not been applied, please restart the application.</string>
    <string name="app_description">OpenDSBmobile, an open source DSBmobile content viewer</string>
</resources>
