<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_section_ids"
        android:title="@string/nav_group_title_logins"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_item_edit_ids"
                android:enabled="false"
                app:actionLayout="@layout/item_edit_ids"
                tools:ignore="MenuTitle" />

            <group
                android:id="@+id/nav_group_ids"
                android:checkableBehavior="single" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_section_content"
        android:title="@string/nav_group_title_content">
        <menu>
            <group
                android:id="@+id/nav_group_content"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_timetables"
                    android:enabled="false"
                    android:icon="@drawable/ic_menu_timetables"
                    android:title="@string/nav_item_timetables" />
                <item
                    android:id="@+id/nav_tiles"
                    android:enabled="false"
                    android:icon="@drawable/ic_menu_tiles"
                    android:title="@string/nav_item_tiles" />
                <item
                    android:id="@+id/nav_news"
                    android:enabled="false"
                    android:icon="@drawable/ic_menu_news"
                    android:title="@string/nav_item_news" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/action_about" />
    </group>

</menu>
