<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/imageButton_delete"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/nav_item_delete"
        android:onClick="deleteLoginsButton"
        android:src="@drawable/ic_menu_delete"
        android:tint="?attr/colorControlNormal"
        android:tintMode="src_in"
        android:enabled="false"/>

    <ImageButton
        android:id="@+id/imageButton_add"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foregroundTintMode="add"
        android:src="@drawable/ic_menu_add"
        android:tint="?attr/colorControlNormal"
        android:tintMode="src_in"
        android:contentDescription="@string/nav_item_add"
        android:onClick="addLoginButton"/>

    <ImageButton
        android:id="@+id/imageButton_edit"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/ic_menu_edit"
        android:tint="?attr/colorControlNormal"
        android:tintMode="src_in"
        android:contentDescription="@string/nav_item_edit"
        android:onClick="editLoginsButton"/>

</LinearLayout>